# ucterm

./: CMakeLists.txt  README.md  cli.c  cli.h  ucterm.c  ucterm.h
simulation/avr/: UcTermTest.pdsprj
tests/: test_ucterm.c
